Fixed a z-index bug.

--- a/styles/main.css
+++ b/styles/main.css
@@ -140,7 +140,7 @@
 	background: rgba(0,0,0,0.8); 
 	width:      100%;
 	height:     100%; 
-	z-index:    3;
+	z-index:    999;
 	top:        0; 
 	left:       0; 
 	position:   fixed; 
